--- a/nginx-yaml-files/service.yaml
+++ b/nginx-yaml-files/service.yaml
@@ -6,7 +6,7 @@ metadata:
     name: nginx-service
     namespace: default
 spec:
-  kind: NodePort
+  type: NodePort
   ports:
     port: 80
     protocol: TCP
